--- a/devops/roles/nginx/templates/nginx.conf.j2
+++ b/devops/roles/nginx/templates/nginx.conf.j2
@@ -17,11 +17,15 @@ server {
 
   try_files $uri/index.html $uri @app;
 
+  location ~* ^.+\.(?:css|js|jpe?g|gif|ico|png)$ {
+    expires 30d;
+  }
+
   location @app {
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Host $http_host;
-      proxy_redirect off;
-      proxy_pass http://app;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+    proxy_pass http://app;
   }
 
   error_page 500 502 503 504 /500.html;
