--- a/app/views/boxes/_form.html.slim
+++ b/app/views/boxes/_form.html.slim
@@ -24,6 +24,13 @@ a.anchor#vm-settings
                       span data-toggle='tooltip' data-placement='top' title='{{ v.packages.join(", ") }}' {{ v.label }}
                       input ng-repeat='package in v.packages' type='hidden' name='box[packages][]' value='{{ package }}' ng-disabled='!v.selected'
             .row
+              .col-lg-12
+                .form-group
+                  label.checkbox-inline
+                    input type='checkbox' name='box[autoconf]' value='true' ng-model='configuration.autoconf'
+                    ' Configure VM automatically for best performance
+                    p.small ng-show='configuration.autoconf' VirtualBox will use all of available CPU cores and 1/3 of available RAM. This option is recommended if you are using one virtual machine at a time.
+            .row ng-hide='configuration.autoconf'
               .col-lg-4
                 .form-group
                   label for='vm_memory'= t('.memory')
@@ -46,7 +53,8 @@ a.anchor#vm-settings
                   label for='vm_share_type' Share type
                   select.form-control required=true id='vm_share_type' name='box[vm_share_type]' ng-model='configuration.vm_share_type' ng-options='t for t in shareTypes track by t'
               .col-lg-4
-                p It's recommended to use NFS sharing type because it provides better performance.
+                br
+                p.small It's recommended to use NFS sharing type because it provides better performance.
 
           .col-lg-4
             label for='new_guest_port' Port forwarding
