--- a/app/views/boxes/show.html.slim
+++ b/app/views/boxes/show.html.slim
@@ -18,12 +18,8 @@
 
       h2 Install requirements
       p You will need <a href="https://www.virtualbox.org/wiki/Downloads">VirtualBox</a>, <a href="https://www.vagrantup.com/downloads.html">vagrant</a> and <a href="http://docs.ansible.com/intro_installation.html">ansible</a> to be installed. ansible also requires Python and some Python modules to be installed.
-      p Fast way to install VirtualBox and vagrant is to use <a href="https://github.com/caskroom/homebrew-cask">brew cask</a>. ansible can be installed with homebrew as well:
-      pre
-        | brew install caskroom/cask/brew-cask
-          brew cask install virtualbox
-          brew cask install vagrant
-          brew install ansible
+      = render "boxes/#{browser.platform}/requirements"
+      
       h2 Unzip
       p Go ahead and copy your downloaded box to your Ruby on Rails project directory.
       p
