Add Windows support

--- a/app/views/boxes/mac/_requirements.html.slim
+++ b/app/views/boxes/mac/_requirements.html.slim
@@ -1,4 +1,7 @@
+p You will need <a href="https://www.virtualbox.org/wiki/Downloads">VirtualBox</a>, <a href="https://www.vagrantup.com/downloads.html">vagrant</a> and <a href="http://docs.ansible.com/intro_installation.html">ansible</a> to be installed. ansible also requires Python and some Python modules to be installed.
+
 p Fast way to install VirtualBox and vagrant is to use <a href="https://github.com/caskroom/homebrew-cask">brew cask</a>. ansible can be installed with homebrew as well:
+
 pre
   | brew install caskroom/cask/brew-cask
     brew cask install virtualbox
