--- a/app/views/shared/_head.html.slim
+++ b/app/views/shared/_head.html.slim
@@ -3,6 +3,7 @@ meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"
 meta name="viewport" content="width=device-width, initial-scale=1.0"
 title railsbox - Fast and easy Ruby on Rails virtual boxes
 = csrf_meta_tags
+= render 'shared/rollbar'
 = favicon_link_tag 'favicon.ico'
 = stylesheet_link_tag "application", :media => "all"
 = javascript_include_tag "application"
