Require minimum vagrant 1.5

--- a/templates/Vagrantfile.erb
+++ b/templates/Vagrantfile.erb
@@ -1,6 +1,8 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+Vagrant.require_version '>= 1.5'
+
 VAGRANTFILE_API_VERSION = '2'
 
 needs_restart = false
