Add vim, vim-sensible, vim-rails and vim-bundler

--- a/templates/ansible/site.yml.erb
+++ b/templates/ansible/site.yml.erb
@@ -2,6 +2,7 @@
 - hosts: all
   roles:
     - base
+    - vim
     - swap
 <% (params[:databases] + params[:background_jobs]).each do |role| -%>
     - <%= role %>
