--- a/app/views/boxes/show.html.slim
+++ b/app/views/boxes/show.html.slim
@@ -22,13 +22,17 @@
             vagrant provision               # To re-run ansible playbook
             vagrant halt                    # To stop VM
             vagrant destroy                 # To destroy VM completely
-      h3 unicorn
-      p You can start and stop unicorn by running standard upstart commands:
-      p
-        pre
-          | sudo start #{@box.vm_name}
-            sudo stop #{@box.vm_name}
-            sudo restart #{@box.vm_name}
+      - if @box.server_type == 'nginx_unicorn'
+        h3 unicorn
+        p You can start and stop unicorn by running standard upstart commands:
+        p
+          pre
+            | sudo start #{@box.vm_name}
+              sudo stop #{@box.vm_name}
+              sudo restart #{@box.vm_name}
+      - elsif @box.server_type == 'nginx_passenger'
+        h3 Passenger
+        p You can restart your Rails application by running <kbd>touch tmp/restart.txt</kbd> in <kbd>#{@box.vm_shared_directory}</kbd> dir.
 
       h2 Customization
       p Feel free to customize ansible playbooks as you need. But keep in mind that your changes may be lost if you decide to re-generate configuration using Edit button. Probably it will be best if you keep your customizations in a separate roles which names do not overlap with the playbooks provided by railsbox.
