--- a/templates/ansible/roles/nginx/templates/nginx.conf.j2
+++ b/templates/ansible/roles/nginx/templates/nginx.conf.j2
@@ -15,6 +15,10 @@ http {
   types_hash_max_size 2048;
   # server_tokens off;
 
+{% if server_type == 'nginx_passenger' %}
+  passenger_root /usr/lib/ruby/vendor_ruby/phusion_passenger/locations.ini;
+{% endif %}
+
   ssl_session_cache   shared:SSL:10m;
   ssl_session_timeout 10m;
 
