--- a/templates/ansible/site.yml.erb
+++ b/templates/ansible/site.yml.erb
@@ -1,11 +1,30 @@
 ---
-- hosts: all
+- hosts: vm
+  roles:
+    - swap
+
+- hosts: application
+  handlers:
+    <% params[:background_jobs].each do |bg| -%>
+    - include: roles/<%= bg %>/handlers/main.yml
+    <% end %>
   roles:
     - base
     - vim
-    - swap
-<% (params[:databases] + params[:background_jobs]).each do |role| -%>
-    - <%= role %>
-<% end %>
     - webserver
-    - dbserver
+
+<% params[:background_jobs].each do |bg| -%>
+- hosts: <%= bg %>
+  handlers:
+    - include: roles/<%= server_role %>/handlers/main.yml
+  roles:
+    - base
+    - <%= bg %>
+<% end %>
+
+<% params[:databases].each do |db| -%>
+- hosts: <%= db %>
+  roles:
+    - <%= db %>
+
+<% end %>
