--- a/templates/Vagrantfile.dockerhost.erb
+++ b/templates/Vagrantfile.dockerhost.erb
@@ -6,37 +6,11 @@ Vagrant.require_version '>= 1.5'
 <%= render 'vagrant_plugins' %>
 
 Vagrant.configure('2') do |config|
-  config.vm.provider :virtualbox do |vb|
-    <% if params[:autoconf] -%>
-    host = RbConfig::CONFIG["host_os"]
-
-    if host =~ /darwin/ # OS X
-      # sysctl returns bytes, convert to MB
-      vb.memory = `sysctl -n hw.memsize`.to_i / 1024 / 1024 / 3
-      vb.cpus = `sysctl -n hw.ncpu`.to_i
-    elsif host =~ /linux/ # Linux
-      # meminfo returns kilobytes, convert to MB
-      vb.memory = `grep 'MemTotal' /proc/meminfo | sed -e 's/MemTotal://' -e 's/ kB//'`.to_i / 1024 / 2
-      vb.cpus = `nproc`.to_i
-    end
-    <% else %>
-    vb.memory = <%= params[:vm_memory] %>
-    vb.cpus = <%= params[:vm_cores] %>
-    <% end %>
-
-    vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
-    vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
-  end
+  <%= render 'virtualbox_config' %>
 
   config.vm.box = '<%= params[:vm_os] %>'
 
   config.vm.network 'private_network', type: 'dhcp'
-  config.vm.synced_folder '../', '<%= params[:vm_shared_directory] %>'<% if params[:vm_share_type] == 'NFS' -%>, type: 'nfs'<% end %>
-  config.vm.synced_folder 'ansible', '/ansible'<% if params[:vm_share_type] == 'NFS' -%>, type: 'nfs'<% end %>
-  <% if params[:vm_share_type] == 'NFS' -%>
-  config.bindfs.bind_folder '/vagrant', '/vagrant'
-  config.bindfs.bind_folder '/ansible', '/ansible'
-  <% end %>
 
   config.vm.define '<%= params[:vm_name] %>' do |machine|
     machine.vm.hostname = '<%= params[:server_name] %>'
