--- a/templates/ansible/site.yml.erb
+++ b/templates/ansible/site.yml.erb
@@ -3,6 +3,10 @@
   roles:
     - swap
 
+- hosts: dockerhost
+  roles:
+    - docker
+
 - hosts: application
   handlers:
     <% params[:background_jobs].each do |bg| -%>
