--- a/app/views/boxes/_form.html.slim
+++ b/app/views/boxes/_form.html.slim
@@ -171,7 +171,7 @@ a.anchor#databases
 
         input ng-repeat='database in activeObjects' type='hidden' name='box[databases][]' value='{{ database }}'
 
-        - Box.databases.each do |database|
+        - Databases.list.each do |database|
           .panel.panel-primary ng-show="isActive('#{database.id}')"
             .panel-heading= database.name
             .panel-body
