--- a/templates/Vagrantfile.dockerhost.erb
+++ b/templates/Vagrantfile.dockerhost.erb
@@ -3,19 +3,17 @@
 
 Vagrant.require_version '>= 1.5'
 
-<%= render 'vagrant_plugins' %>
-
 Vagrant.configure('2') do |config|
-  <%= render 'virtualbox_config' %>
+<%= render 'virtualbox_config' %>
 
   config.vm.box = '<%= params[:vm_os] %>'
 
   config.vm.network 'private_network', type: 'dhcp'
 
-  config.vm.define '<%= params[:vm_name] %>' do |machine|
-    machine.vm.hostname = '<%= params[:server_name] %>'
+  config.vm.define 'default' do |machine|
+    machine.vm.hostname = 'dockerhost'
     <% params[:vm_ports].each_value do |port| -%>
-    machine.vm.network 'forwarded_port', guest: <%= port[:guest] %>, host: <%= port[:host] %>
+    machine.vm.network 'forwarded_port', 'guest' => <%= port[:guest] %>, 'host' => <%= port[:host] %>
     <% end %>
   end
 
@@ -26,18 +24,10 @@ Vagrant.configure('2') do |config|
       ansible.playbook = 'ansible/site.yml'
       ansible.sudo = true
       ansible.groups = {
-        'application' => %w(<%= params[:vm_name] %>),
-        'vm' => %w(<%= params[:vm_name] %>),
-        <% roles.each do |role| -%>
-        '<%= role %>' => %w(<%= params[:vm_name] %>),
-        <% end %>
-        'development:children' => %w(application vm <%= roles.join(' ') %>),
+        'vm' => %w(default),
+        'dockerhost' => %w(default),
       }
       ansible.tags = ENV['TAGS']
-    end
-  else
-    Dir['shell/*.sh'].each do |script|
-      config.vm.provision 'shell', path: script, privileged: false
     end
   end
 end
