--- a/templates/Vagrantfile.erb
+++ b/templates/Vagrantfile.erb
@@ -65,7 +65,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.define '<%= params[:vm_name] %>' do |machine|
     machine.vm.hostname = '<%= params[:server_name] %>'
     <% params[:vm_ports].each_value do |port| -%>
-    machine.vm.network 'forwarded_port', guest: <%= port[:guest] %>, host: <%= port[:host] %>
+    machine.vm.network 'forwarded_port', guest: <%= port[:guest] %>, host: <%= port[:host] %>, auto_correct: true
     <% end %>
   end
 
