--- a/app/views/boxes/_form.html.slim
+++ b/app/views/boxes/_form.html.slim
@@ -197,7 +197,7 @@ a.anchor#background-jobs
       .panel-body
         .dropdown ng-hide='allActive()'
           button.btn.btn-lg.btn-default.dropdown-toggle type='button' data-toggle='dropdown' id='backgroundJobsMenu'
-            ' Add worker
+            = t('.add_worker')
             span.caret
           ul.dropdown-menu role='menu' aria-labelledby='backgroundJobsMenu'
             li ng-repeat='backgroundJob in allObjects' role='presentation' ng-hide='isActive(backgroundJob.id)'
