--- a/templates/ansible/site.yml.erb
+++ b/templates/ansible/site.yml.erb
@@ -7,6 +7,11 @@
   roles:
     - docker
 
+- hosts: all
+  gather_facts: no
+  roles:
+    - apt_proxy
+
 - hosts: application
   handlers:
     <% params[:background_jobs].each do |bg| -%>
