--- a/templates/Vagrantfile.single.erb
+++ b/templates/Vagrantfile.single.erb
@@ -40,6 +40,7 @@ Vagrant.configure('2') do |config|
         'development:children' => %w(application vm <%= roles.join(' ') %>),
       }
       ansible.tags = ENV['TAGS']
+      ansible.raw_arguments = ENV['ANSIBLE_ARGS']
     end
   else
     Dir['shell/*.sh'].each do |script|
