--- a/templates/ansible/roles/apt_proxy/templates/01proxy.j2
+++ b/templates/ansible/roles/apt_proxy/templates/01proxy.j2
@@ -1,1 +1,7 @@
-Acquire::http { Proxy "http://192.168.59.103:3142"; };
+Acquire::http { Proxy "http://192.168.59.103:8000"; };
+
+Acquire::http::Proxy::ppa.launchpad.net DIRECT;
+Acquire::http::Proxy::ftp.osuosl.org DIRECT;
+Acquire::http::Proxy::ppa:nginx/stable DIRECT;
+Acquire::http::Proxy::ppa:brightbox/ruby-ng DIRECT;
+Acquire::http::Proxy::ppa:ansible/ansible DIRECT;
