--- a/templates/ansible/roles/nginx/templates/nginx.conf.j2
+++ b/templates/ansible/roles/nginx/templates/nginx.conf.j2
@@ -1,6 +1,8 @@
-user www-data;
+user {{ user_name }};
 worker_processes auto;
 pid /run/nginx.pid;
+
+env PATH;
 
 events {
   worker_connections 768;
