--- a/templates/ansible/roles/apt_proxy/templates/01proxy.j2
+++ b/templates/ansible/roles/apt_proxy/templates/01proxy.j2
@@ -1,5 +1,6 @@
 Acquire::http { Proxy "http://192.168.59.103:8000"; };
 
+Acquire::http::Proxy::oss-binaries.phusionpassenger.com DIRECT;
 Acquire::http::Proxy::ppa.launchpad.net DIRECT;
 Acquire::http::Proxy::ftp.osuosl.org DIRECT;
 Acquire::http::Proxy::ppa:nginx/stable DIRECT;
