Reduce deployment downtime by preparing release in advance

--- a/devops/roles/unicorn/templates/unicorn.rb.j2
+++ b/devops/roles/unicorn/templates/unicorn.rb.j2
@@ -1,6 +1,6 @@
 # {{ ansible_managed }}
 
-working_directory '{{ app_path }}'
+working_directory '{{ current_release_path }}'
 
 pid '{{ unicorn_pid_path }}'
 
