--- a/templates/Vagrantfile.single.erb
+++ b/templates/Vagrantfile.single.erb
@@ -11,9 +11,9 @@ Vagrant.configure('2') do |config|
   config.vm.box = '<%= params[:vm_os] %>'
 
   config.vm.network 'private_network', ip: '<%= params[:vm_ip] %>'
-  config.vm.synced_folder '../', '<%= params[:vm_shared_directory] %>'<% if params[:vm_share_type] == 'NFS' -%>, type: 'nfs'<% end %>
-  config.vm.synced_folder 'ansible', '/ansible'<% if params[:vm_share_type] == 'NFS' -%>, :type => 'nfs'<% end %>
-  <% if params[:vm_share_type] == 'NFS' -%>
+  config.vm.synced_folder '../', '<%= params[:vm_shared_directory] %>'<%= vm_share_type_param %>
+  config.vm.synced_folder 'ansible', '/ansible'<%= vm_share_type_param %>
+  <% if params[:vm_share_type] == 'nfs' -%>
   config.bindfs.bind_folder '/vagrant', '/vagrant'
   config.bindfs.bind_folder '/ansible', '/ansible'
   <% end %>
